# intelligent-document-processor

./: .env.example  .gitignore  LICENSE  README.md
backend/: .env.example  README.md  database_schema.sql  extracted_po_data.json  purchase_order_pydantic.json  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/agui/: protocol.py
backend/app/api/: auth.py  documents.py
backend/app/models/: schemas.py
backend/app/services/: auth.py  document_processing.py
doc/: README.md  pyproject.toml
doc/src/doc/: crew.py  main.py
doc/src/doc/config/: agents.yaml  tasks.yaml
doc/src/doc/config/data_model/: Purchase_order_shema.py  Receipt_shema.py  data_base_shema.py  invoice_shema.py
doc/src/doc/tools/: Invoice_Tool.py  Purchase_Tool.py  Receipe_Tool.py  classification_manager.py
streamlit-app/: README.md  app.py
