[tool.poetry]
name = "doc"
version = "0.1.0"
description = "doc using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.28.8"}

[tool.poetry.scripts]
doc = "doc.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"